# portfolio/routes/api.php
@@ -2,7 +2,8 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-
+use App\Http\Controllers\Front\HomePageController;
+use App\Http\Controllers\Auth\AuthUserController;
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -14,15 +15,18 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+Route::middleware('auth:api')->group(function () {
+    Route::get('/user', [AuthUserController::class, 'getUser']);
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
 });
 
 // frontend data
 Route::post('/login', [\App\Http\Controllers\Auth\AuthUserController::class, 'login']);
 Route::post('/register', [\App\Http\Controllers\Auth\AuthUserController::class, 'register']);
+Route::post('/refresh-token', [\App\Http\Controllers\Auth\AuthUserController::class, 'refreshToken']);
 Route::post('/logout', [\App\Http\Controllers\Auth\AuthUserController::class, 'logout']);
+
+
 Route::get('/getPhotoData', [\App\Http\Controllers\Front\HomePageController::class, 'getImages']);
 Route::get('/getFollowData', [\App\Http\Controllers\Front\HomePageController::class, 'getFollows']);
 
